codegen/tests/snapshots/codegen__x86_64__addr.snap
---
source: codegen/tests/codegen.rs
assertion_line: 40
expression: mach_module.display_asm()
---
  .text
  .intel_syntax noprefix
  .text
  .globl main
main:
.LBL0_0:
  push rbp
  mov rbp, rsp
  sub rsp, 16
  mov dword ptr [rbp-4], 0
  mov dword ptr [rbp-8], 42
  lea rax, [rbp-8]
  mov qword ptr [rbp-16], rax
  mov rax, qword ptr [rbp-16]
  mov eax, dword ptr [rax]
  add rsp, 16
  pop rbp
  ret 

