codegen/tests/snapshots/codegen__x86_64__ary2.snap
---
source: codegen/tests/codegen.rs
assertion_line: 25
expression: mach_module.display_asm()
---
  .text
  .intel_syntax noprefix
  .text
  .globl main
main:
.LBL0_0:
  push rbp
  mov rbp, rsp
  sub rsp, 32
  mov dword ptr [rbp-4], 42
  mov eax, dword ptr [rbp-4]
  mov dword ptr [rbp-20], eax
  mov dword ptr [rbp-16], eax
  mov dword ptr [rbp-12], eax
  mov dword ptr [rbp-8], eax
  mov eax, 0
  add rsp, 32
  pop rbp
  ret 

