codegen/tests/snapshots/codegen__x86_64__ary3.snap
---
source: codegen/tests/codegen.rs
assertion_line: 26
expression: mach_module.display_asm()
---
  .text
  .intel_syntax noprefix
  .text
  .globl main
main:
.LBL0_0:
  push rbp
  mov rbp, rsp
  sub rsp, 16
  mov dword ptr [rbp-4], 0
  mov dword ptr [rbp-16], 0
  movsxd rax, dword ptr [rbp-16]
  mov dword ptr [rbp-12+rax*4], 1
  mov dword ptr [rbp-16], 1
  movsxd rax, dword ptr [rbp-16]
  mov dword ptr [rbp-12+rax*4], 2
  mov eax, 0
  add rsp, 16
  pop rbp
  ret 

