codegen/tests/snapshots/codegen__x86_64__call2.snap
---
source: codegen/tests/codegen.rs
assertion_line: 31
expression: mach_module.display_asm()
---
  .text
  .intel_syntax noprefix
  .text
  .globl f
f:
.LBL0_0:
  push rbp
  mov rbp, rsp
  mov eax, edi
  pop rbp
  ret 
  .text
  .globl main
main:
.LBL1_0:
  push rbp
  mov rbp, rsp
  mov edi, 1
  call f
  pop rbp
  ret 

