codegen/tests/snapshots/codegen__x86_64__condbr.snap
---
source: codegen/tests/codegen.rs
assertion_line: 32
expression: mach_module.display_asm()
---
  .text
  .intel_syntax noprefix
  .text
  .globl main
main:
.LBL0_0:
  push rbp
  mov rbp, rsp
  sub rsp, 16
  mov dword ptr [rbp-4], 2
  mov eax, dword ptr [rbp-4]
  cmp eax, 2
  je .LBL0_1
  jmp .LBL0_2
.LBL0_1:
  mov eax, 1
  add rsp, 16
  pop rbp
  ret 
.LBL0_2:
  mov eax, 2
  add rsp, 16
  pop rbp
  ret 

