codegen/tests/snapshots/codegen__x86_64__hello.snap
---
source: codegen/tests/codegen.rs
assertion_line: 39
expression: mach_module.display_asm()
---
  .text
  .intel_syntax noprefix
  .section .text.startup
__cxx_global_var_init:
.LBL0_0:
  push rbp
  mov rbp, rsp
  lea rdi, [rip + _ZStL8__ioinit]
  call _ZNSt8ios_base4InitC1Ev
  lea rdi, [rip + _ZNSt8ios_base4InitD1Ev]
  lea rsi, [rip + _ZStL8__ioinit]
  lea rdx, [rip + __dso_handle]
  call __cxa_atexit
  pop rbp
  ret 
  .text
  .globl main
main:
.LBL4_0:
  push rbp
  mov rbp, rsp
  sub rsp, 16
  mov dword ptr [rbp-4], 0
  lea rdi, [rip + _ZSt4cout]
  lea rsi, [rip + .str]
  call _ZStlsISt11char_traitsIcEERSt13basic_ostreamIcT_ES5_PKc
  mov rdi, rax
  lea rsi, [rip + _ZSt4endlIcSt11char_traitsIcEERSt13basic_ostreamIT_T0_ES6_]
  call _ZNSolsEPFRSoS_E
  mov eax, 0
  add rsp, 16
  pop rbp
  ret 
  .section .text.startup
_GLOBAL__sub_I_hello.cc:
.LBL8_0:
  push rbp
  mov rbp, rsp
  call __cxx_global_var_init
  pop rbp
  ret 
  .comm _ZStL8__ioinit,1,1
.str:
  .string "hello world"
  .section .init_array
  .quad _GLOBAL__sub_I_hello.cc

